basvandriel-website-deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basvandriel-website-test
spec:
  selector:
    matchLabels:
      app: basvandriel-website-test
  template:
    metadata:
      labels:
        app: basvandriel-website-test
    spec:
      containers:
        - name: website
          image: localhost:30050/basvandriel-website:test
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
