basvandriel-website-service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: basvandriel-website-service-test
spec:
  selector:
    app: basvandriel-website-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
