basvandriel-website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basvandriel-website-service
spec:
  selector:
    app: basvandriel-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
